@@ -499,6 +499,11 @@ dxmorg@florida.cops.gov
 </test>
 
 <test check-cpp-import-pub>
-  cmd = ./cpptest 1
+  cmd = ./cpptest 2
+  expect = /ok/
+</test>
+
+<test check-cpp-signature>
+  cmd = ./cpptest 3
   expect = /ok/
 </test>
